Clear visual overflow of tables & single-line input during recalc.

Bug: 918848

Change-Id: I1b712a3aee6f8950160886141065e1b0a3799c34
Reviewed-on: https://chromium-review.googlesource.com/c/1394873
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Aleks Totic <atotic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619819}
Former-commit-id: ffe1df92d0a16ba0f42dc4e083178c8de5d3904d